@@ -3,6 +3,8 @@ Changes in version 1.019
 
 - Broke the iobuf includes into smaller parts.
 
+- Added low-level fcntl wrapper functions: fcntl_{fd,fl}_{off,on}
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
